# My_dc_extraction

./: .gitignore  .gitlab-ci.yml  .gitmodules  README.md  datacube-extract-3-10.yml  datacube-extract-3-10_linux.yml  datacube-extract-3-10_windows.yml  main.py  pyproject.toml  requirements.txt  util.py
.gitlab/issue_templates/: error_template.md
ccmeo_datacube/: describe.py  extract.py  extract_cog.py  extract_cog_validator.py  utils.py
config/dc_Extract_params/: dc_extractParamsCanvas.yaml
describe/: .gitignore  README.md  basic_requirements.txt
describe/doc_md/: code_paths.md  plugin_integration.md
describe/tests/: dev.py  test_unit.py
docs_md/: Contribute.md  Installation.md  dc_extract_tools.md  submodules.md
extract/: README.md
extract/devtests/: README.md  __init__.py  create_fake_tiff_for_dev.py  extract_cog_refactoring.py  extract_mosaic_by_window_wrapper.py  lcm_out_box.py  test_asset_urls.py  test_asyncio_rasterio.py  test_block_windows.py  test_clip_to_grid.py  test_clip_window_geom.py  test_concurent_processing.py  test_dst_definition.py  test_extract.py  test_extract_cog_validator.py  test_extract_multiproj.py  test_extract_old.py  test_extract_vrt.py  test_io_threading.py  test_mosaic.py  test_mosaic_all_filled.py  test_mosaic_chn.py  test_mosaic_chn_subzones.py  test_resolution_filter.py  test_rioxarray.py  test_search_loop.py  test_tap_params.py  test_temp_hackathon.py  test_validate_input_pydantic.py
extract/monitoring/: README.md
extract/tests/: README.md  (+4 more)
extract_cog/: README.md
extract_fabdem/: Sample_Areas_FeaturesToJSON.geojson  canada_fabdem.py  extract_fabdem.py  fabdem.geojson  fabdem_error.txt  fabdem_log.txt  grid_id_fabdems.json
(+22 files in other folders)
