[build-system]
requires = ["setuptools>=68.2.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ccmeo_datacube"
dynamic = ["version"]
description = "Extraction tools for the ccmeo datacube"
readme = "README.md"
requires-python = "~=3.10"
authors = [
  { name="Charlotte Crevier", email="charlotte.crevier@nrcan-rncan.gc.ca" },
]
maintainers = [
    {name = "Charlotte Crevier", email = "charlotte.crevier@nrcan-rncan.gc.ca"},
    {name = "Norah Brown", email = "norah.brown@nrcan-rncan.gc.ca"},
    {name = "Marc-André Daviault", email = "marc-andre.daviault@nrcan-rncan.gc.ca"},
]
keywords = ["geobase", "datacube", "raster", "extraction"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
license = {file = "LICENSE"}
dependencies = [
    "numpy==1.25.2",
    "rasterio==1.3.8",
    "requests==2.31.0",
    "fiona==1.9.4",
    "dask==2023.9.2",
    "geopandas==0.12.2",
    "rioxarray==0.15.0",
    "shapely==2.0.1",
    "pydantic==2.4.1",
    "pytest==7.4.2",
    "xarray==2023.9.0",
    "nrcan_ssl@git+https://git.geoproc.geogc.ca/datacube/utilities/nrcan_ssl",
]


[project.urls]
"Homepage" = "https://git.geoproc.geogc.ca/datacube/extraction/dc_extract"
"Bug Tracker" = "https://git.geoproc.geogc.ca/datacube/extraction/dc_extract/-/issues"

[tool.setuptools.dynamic]
version = {file = ["VERSION"]}

[tool.setuptools.packages.find]
include = ['ccmeo_datacube']

[project.scripts]
ccmeo_datacube-describe = "ccmeo_datacube.describe:_handle_cli"
ccmeo_datacube-extract_cog = "ccmeo_datacube.extract_cog:_handle_cli"
